Fix MessageCenter messages overflow behavior. (#503)

--- a/ui/appui-layout-react/src/appui-layout-react/footer/message-center/Message.scss
+++ b/ui/appui-layout-react/src/appui-layout-react/footer/message-center/Message.scss
@@ -33,4 +33,9 @@
   > .nz-icon {
     min-width: 20px;
   }
+
+  > .nz-content {
+    overflow: hidden;
+    overflow-wrap: break-word;
+  }
 }
